RESOLVED FIXED279872
REGRESSION(283819@main): ASSERTION FAILED: !m_loadingFrameCount
https://bugs.webkit.org/show_bug.cgi?id=279872
Summary REGRESSION(283819@main): ASSERTION FAILED: !m_loadingFrameCount
Fujii Hironori
Reported 2024-09-18 00:31:08 PDT
Debug tests are crashing after 283819@main. https://build.webkit.org/results/Apple-Sonoma-Debug-AppleSilicon-WK2-Tests/283820@main%20(4085)/results.html ASSERTION FAILED: !m_loadingFrameCount /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Source/WebKit/UIProcess/WebPageProxyInternals.h(168) : virtual void WebKit::PageLoadTimingFrameLoadStateObserver::didFailProvisionalLoad() 1 0x30234e5a0 WebKit::PageLoadTimingFrameLoadStateObserver::didFailProvisionalLoad() 2 0x3020dda30 WebKit::FrameLoadState::didFailProvisionalLoad()::$_3::operator()(WebKit::FrameLoadStateObserver&) const 3 0x3020dd9c4 WTF::Detail::CallableWrapper<WebKit::FrameLoadState::didFailProvisionalLoad()::$_3, void, WebKit::FrameLoadStateObserver&>::call(WebKit::FrameLoadStateObserver&) 4 0x3020db494 WTF::Function<void (WebKit::FrameLoadStateObserver&)>::operator()(WebKit::FrameLoadStateObserver&) const 5 0x3020d5e40 WTF::WeakHashSet<WebKit::FrameLoadStateObserver, WTF::DefaultWeakPtrImpl, (WTF::EnableWeakPtrThreadingAssertions)1>::forEach(WTF::Function<void (WebKit::FrameLoadStateObserver&)> const&) 6 0x3020d62ac WebKit::FrameLoadState::didFailProvisionalLoad() 7 0x302250390 WebKit::WebFrameProxy::didFailProvisionalLoad() 8 0x302300484 WebKit::WebPageProxy::didFailProvisionalLoadForFrameShared(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::WebFrameProxy&, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String const&, WebCore::ResourceError const&, WebCore::WillContinueLoading, WebKit::UserData const&, WebCore::WillInternallyHandleFailure) 9 0x3022ffe64 WebKit::WebPageProxy::didFailProvisionalLoadForFrame(IPC::Connection&, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String const&, WebCore::ResourceError const&, WebCore::WillContinueLoading, WebKit::UserData const&, WebCore::WillInternallyHandleFailure) 10 0x303a8f0d8 auto void IPC::callMemberFunction<WebKit::WebPageProxy, WebKit::WebPageProxy, void (IPC::Connection&, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String const&, WebCore::ResourceError const&, WebCore::WillContinueLoading, WebKit::UserData const&, WebCore::WillInternallyHandleFailure), std::__1::tuple<WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String, WebCore::ResourceError, WebCore::WillContinueLoading, WebKit::UserData, WebCore::WillInternallyHandleFailure>>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(IPC::Connection&, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String const&, WebCore::ResourceError const&, WebCore::WillContinueLoading, WebKit::UserData const&, WebCore::WillInternallyHandleFailure), IPC::Connection&, std::__1::tuple<WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String, WebCore::ResourceError, WebCore::WillContinueLoading, WebKit::UserData, WebCore::WillInternallyHandleFailure>&&)::'lambda'(auto&&...)::operator()<WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String, WebCore::ResourceError, WebCore::WillContinueLoading, WebKit::UserData, WebCore::WillInternallyHandleFailure>(auto&&...) const 11 0x303a8efd4 decltype(std::declval<WebKit::WebPageProxy>()(std::declval<WebKit::FrameInfoData>(), std::declval<WebCore::ResourceRequest>(), std::declval<std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>>(), std::declval<WTF::String>(), std::declval<WebCore::ResourceError>(), std::declval<WebCore::WillContinueLoading>(), std::declval<WebKit::UserData>(), std::declval<WebCore::WillInternallyHandleFailure>())) std::__1::__invoke[abi:sn170006]<void IPC::callMemberFunction<WebKit::WebPageProxy, WebKit::WebPageProxy, void (IPC::Connection&, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String const&, WebCore::ResourceError const&, WebCore::WillContinueLoading, WebKit::UserData const&, WebCore::WillInternallyHandleFailure), std::__1::tuple<WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String, WebCore::ResourceError, WebCore::WillContinueLoading, WebKit::UserData, WebCore::WillInternallyHandleFailure>>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(IPC::Connection&, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String const&, WebCore::ResourceError const&, WebCore::WillContinueLoading, WebKit::UserData const&, WebCore::WillInternallyHandleFailure), IPC::Connection&, std::__1::tuple<WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String, WebCore::ResourceError, WebCore::WillContinueLoading, WebKit::UserData, WebCore::WillInternallyHandleFailure>&&)::'lambda'(auto&&...), WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String, WebCore::ResourceError, WebCore::WillContinueLoading, WebKit::UserData, WebCore::WillInternallyHandleFailure>(WebKit::WebPageProxy&&, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>&&, WTF::String&&, WebCore::ResourceError&&, WebCore::WillContinueLoading&&, WebKit::UserData&&, WebCore::WillInternallyHandleFailure&&) 12 0x303a8ef64 decltype(auto) std::__1::__apply_tuple_impl[abi:sn170006]<void IPC::callMemberFunction<WebKit::WebPageProxy, WebKit::WebPageProxy, void (IPC::Connection&, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String const&, WebCore::ResourceError const&, WebCore::WillContinueLoading, WebKit::UserData const&, WebCore::WillInternallyHandleFailure), std::__1::tuple<WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String, WebCore::ResourceError, WebCore::WillContinueLoading, WebKit::UserData, WebCore::WillInternallyHandleFailure>>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(IPC::Connection&, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String const&, WebCore::ResourceError const&, WebCore::WillContinueLoading, WebKit::UserData const&, WebCore::WillInternallyHandleFailure), IPC::Connection&, std::__1::tuple<WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String, WebCore::ResourceError, WebCore::WillContinueLoading, WebKit::UserData, WebCore::WillInternallyHandleFailure>&&)::'lambda'(auto&&...), std::__1::tuple<WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String, WebCore::ResourceError, WebCore::WillContinueLoading, WebKit::UserData, WebCore::WillInternallyHandleFailure>, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul, 6ul, 7ul>(WebKit::WebPageProxy&&, WebKit::WebPageProxy&&, std::__1::__tuple_indices<0ul, 1ul, 2ul, 3ul, 4ul, 5ul, 6ul, 7ul>) 13 0x303a8eeb0 decltype(auto) std::__1::apply[abi:sn170006]<void IPC::callMemberFunction<WebKit::WebPageProxy, WebKit::WebPageProxy, void (IPC::Connection&, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String const&, WebCore::ResourceError const&, WebCore::WillContinueLoading, WebKit::UserData const&, WebCore::WillInternallyHandleFailure), std::__1::tuple<WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String, WebCore::ResourceError, WebCore::WillContinueLoading, WebKit::UserData, WebCore::WillInternallyHandleFailure>>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(IPC::Connection&, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String const&, WebCore::ResourceError const&, WebCore::WillContinueLoading, WebKit::UserData const&, WebCore::WillInternallyHandleFailure), IPC::Connection&, std::__1::tuple<WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String, WebCore::ResourceError, WebCore::WillContinueLoading, WebKit::UserData, WebCore::WillInternallyHandleFailure>&&)::'lambda'(auto&&...), std::__1::tuple<WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String, WebCore::ResourceError, WebCore::WillContinueLoading, WebKit::UserData, WebCore::WillInternallyHandleFailure>>(WebKit::WebPageProxy&&, WebKit::WebPageProxy&&) 14 0x303a8ee84 void IPC::callMemberFunction<WebKit::WebPageProxy, WebKit::WebPageProxy, void (IPC::Connection&, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String const&, WebCore::ResourceError const&, WebCore::WillContinueLoading, WebKit::UserData const&, WebCore::WillInternallyHandleFailure), std::__1::tuple<WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String, WebCore::ResourceError, WebCore::WillContinueLoading, WebKit::UserData, WebCore::WillInternallyHandleFailure>>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(IPC::Connection&, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String const&, WebCore::ResourceError const&, WebCore::WillContinueLoading, WebKit::UserData const&, WebCore::WillInternallyHandleFailure), IPC::Connection&, std::__1::tuple<WebKit::FrameInfoData, WebCore::ResourceRequest, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String, WebCore::ResourceError, WebCore::WillContinueLoading, WebKit::UserData, WebCore::WillInternallyHandleFailure>&&) 15 0x303a4a398 void IPC::handleMessage<Messages::WebPageProxy::DidFailProvisionalLoadForFrame, WebKit::WebPageProxy, WebKit::WebPageProxy, void (IPC::Connection&, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String const&, WebCore::ResourceError const&, WebCore::WillContinueLoading, WebKit::UserData const&, WebCore::WillInternallyHandleFailure)>(IPC::Connection&, IPC::Decoder&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(IPC::Connection&, WebKit::FrameInfoData&&, WebCore::ResourceRequest&&, std::__1::optional<WTF::ObjectIdentifierGeneric<WebCore::NavigationIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::String const&, WebCore::ResourceError const&, WebCore::WillContinueLoading, WebKit::UserData const&, WebCore::WillInternallyHandleFailure)) 16 0x303a41e74 WebKit::WebPageProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 17 0x303eca460 IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 18 0x30201023c WebKit::AuxiliaryProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&) 19 0x302529254 WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 20 0x303e979e8 IPC::Connection::dispatchMessage(IPC::Decoder&) 21 0x303e97e40 IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) 22 0x303e98504 IPC::Connection::dispatchIncomingMessages() 23 0x303eb97c8 IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_16::operator()() const 24 0x303eb9724 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_16, void>::call() 25 0x1165367d8 WTF::Function<void ()>::operator()() const 26 0x1165e8828 WTF::RunLoop::performWork() 27 0x1165ecff8 WTF::RunLoop::performWork(void*) 28 0x185d894d8 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 29 0x185d8946c __CFRunLoopDoSource0 30 0x185d891dc __CFRunLoopDoSources0 31 0x185d87dc8 __CFRunLoopRun
Attachments
Fujii Hironori
Comment 1 2024-09-18 01:09:14 PDT
EWS
Comment 2 2024-09-18 01:11:49 PDT
Committed 283831@main (4aa2e570463d): <https://commits.webkit.org/283831@main> Reviewed commits have been landed. Closing PR #33815 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-09-18 01:12:16 PDT
Note You need to log in before you can comment on or make changes to this bug.