REGRESSION(283819@main): ASSERTION FAILED: !m_loadingFrameCount https://bugs.webkit.org/show_bug.cgi?id=279872

Unreviewed crash fix. Fixed an incorrect assertion.

* Source/WebKit/UIProcess/WebPageProxyInternals.h:

Canonical link: https://commits.webkit.org/283831@main